+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changes in ATK 5.3.1
--------------------
+ Added ability for attributes to define if they want to wrap fields and tables 
  in quotes and turned this on for MySQL and make atkAttribute do it. [Boy]
* Moved addOnChangeHandler() to atkAttribute. [Boy]
* atkNumberAttributes now renders NULL values as "" instead of 0. [Ivo]
* Replaced some deprecated text() calls with atktext(). [Yury, Guido]. 

Changes in ATK 5.3
------------------
+ Made it possible to reset a node in the node repository by adding a
  fourth param to getNode(). [Boy]
+ If newNode() calls the missing class handler it passes along a module
  to the params. [Boy]
+ Added utils/langconvert.sh, a bash shell script that converts ATK4 style
  language files to ATK5 style. [Boy]
+ added atkDocumentWriter and atkOpenDocumentWriter (which wraps the
  TinyButStrong OpenOffice template engine). [Guido]
+ Added atkDocumentHandler (and action icon in default theme for use in
  recordlists). [Guido]
+ Added atkDocumentAttribute for offering access to the Document action
  through a document selector. [Guido]
+ Ability to register dynamic block Smarty plugins. [Boy]
+ Ability to add output filter to Smarty. [Ivo,Boy]
+ Ability to add cache attributes to dynamic function Smarty function. [Boy]
+ Added AF_LIST_NO_NULL_ITEM flag for atkListAttribute. [Ivo]
+ Added AF_NO_TRANSLATION support to atkMultiSelectAttribute and to
  atkListAttribute's display method. (bug #539, #545) [Yury]
+ atkEmailAttribute's DNS lookup now also works on Windows. (bug #549) [Olav]
+ Added 'grantall' privilege; if users have a privilege defined by
  $config_auth_grantall_privilege, they can grant privileges that they do not
  explicitly have themselves. [Ivo]
+ Added Polish language file for atkDateAttribute. (bug #560) [Przemek]