@@ -2,7 +2,7 @@
  /**
    * This file is part of the Achievo ATK distribution.
    * Detailed copyright and licensing information can be found
-   * in the doc/COPYRIGHT and doc/LICENSE files which should be 
+   * in the doc/COPYRIGHT and doc/LICENSE files which should be
    * included in the distribution.
    *
    * @package atk
@@ -14,7 +14,7 @@
    * @version $Revision$
    * $Id$
    */
-   
+
   /**
    * Handler class for the select action of a node. The handler draws a
    * generic select form for searching through the records and selecting
@@ -32,7 +32,7 @@
      * The action handler method.
      */
     function action_select()
-    {      
+    {
       $output = $this->invoke("selectPage");
       if ($output!="")
       {
@@ -40,12 +40,12 @@
         $page->addContent($this->m_node->renderActionPage("select", $output));
       }
     }
-    
+
     /**
      * This method returns an html page containing a recordlist to select
      * records from. The recordlist can be searched, sorted etc. like an
      * admin screen.
-     * 
+     *
      * @return String The html select page.
      */
     function selectPage()
@@ -57,10 +57,12 @@
       if ($node->m_postvars['atklimit']=="") $node->m_postvars['atklimit']=atkconfig("recordsperpage");
       if ($node->m_postvars['atkstartat']=="") $node->m_postvars['atkstartat']=0;
 
-      $filter = $node->validateFilter($node->m_postvars["atkfilter"]);          
+      $filter = $node->validateFilter($node->m_postvars["atkfilter"]);
+
+      $columnConfig = &$node->getColumnConfig();
 
       $recordset = $node->selectDb($filter,
-                                   $node->m_postvars['atkorderby'],
+                                   $columnConfig->getOrderByStatement(),
                                    array("offset" => $node->m_postvars['atkstartat'], "limit" => $node->m_postvars['atklimit']),
                                    $node->m_listExcludes,
                                    "",
@@ -76,29 +78,29 @@
         return "";
       }
       else
-      {        
+      {
         $ui = &$this->getUi();
-        
+
         $params["header"] = text("title_select", $node->m_type);
 
         $navigator = &atknew("atk.utils.atknavigator");
-        if ($node->m_index != "") 
+        if ($node->m_index != "")
         {
           $params["index"] = $navigator->buildIndex($node, $recordset[0][$node->m_index]);
         }
 
-        // create navigation bar        
-        $params["navbar"] = $navigator->buildNavigation($node, "select");        
+        // create navigation bar
+        $params["navbar"] = $navigator->buildNavigation($node, "select");
 
         $actions["select"]=atkurldecode($node->m_postvars['atktarget']);
 
         $recordlist = &atknew("atk.recordlist.atkrecordlist");
         $params["list"] = $recordlist->render($node, $recordset, $actions);
-        
+
         $output = $ui->renderList("select", $params);
-        
+
         return $ui->renderBox(array("title"=>$node->actionTitle('select'),
-                                    "content"=>$output));         
+                                    "content"=>$output));
       }
 
     }
