@@ -1,32 +1,45 @@
 <table border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td align="left">      
+    <td align="left">
         <table id="{$listid}" class="recordlist" cellspacing=0>
             <!-- header -->
-            <tr> 
+            <tr>
               {foreach from=$header item=col}
                 <th valign="{$vorientation}" {$col.htmlattributes}>
-                  {if $col.content != ""}{$col.content}{else}&nbsp;{/if}                     
+                  {if $col.content != ""}{$col.content}{else}&nbsp;{/if}
                 </th>
               {/foreach}
             </tr>
-                            
+
+            {if count($sort)}
+              <!-- search row -->
+              <tr>
+              {$sortstart}
+              {foreach from=$sort item=col}
+                  <th valign="{$vorientation}" {$col.htmlattributes} align="right">
+                    {if $col.content != ""}{$col.content}{else}&nbsp;{/if}
+                  </th>
+              {/foreach}
+              {$sortend}
+              </tr>
+            {/if}
+
             {if count($search)}
               <!-- search row -->
               <tr>
               {$searchstart}
               {foreach from=$search item=col}
                   <th valign="{$vorientation}" {$col.htmlattributes}>
-                    {if $col.content != ""}{$col.content}{else}&nbsp;{/if}                     
+                    {if $col.content != ""}{$col.content}{else}&nbsp;{/if}
                   </th>
               {/foreach}
               {$searchend}
               </tr>
             {/if}
-              
+
             <!-- records -->
             {$liststart}
-              
+
             {foreach from=$rows item=row}
               <tr id="{$row.id}" class="row{if $row.rownum % 2 == 0 }1{else}2{/if}" {if $row.background!=""}style="background-color:{$row.background}" {/if}
                    onmouseover="highlightrow(this, '{$row.highlight}')"
@@ -39,18 +52,18 @@
               {/foreach}
             </tr>
             {/foreach}
-            
+
             {if count($total)}
             <!-- totals row -->
-              <tr>              
+              <tr>
               {foreach from=$total item=col}
                   <th valign="{$vorientation}" {$col.htmlattributes}>
-                    {if $col.content != ""}{$col.content}{else}&nbsp;{/if}                     
+                    {if $col.content != ""}{$col.content}{else}&nbsp;{/if}
                   </th>
-              {/foreach}              
+              {/foreach}
               </tr>
             {/if}
-                      
+
       </table>
     </td>
   </tr>
